# finance-pipeline

./: .gitignore  FIRST_RUN_TESTING_PLAN.md  PROGRESS.md  README.md  pyproject.toml
config/: category_taxonomy.yaml  merchant_rules.yaml  retailer_schema_aliases.yaml  simplifi_category_mapping.yaml  source_registry.yaml  spending_class_mapping.yaml
finance_pipeline/: __init__.py  categorize.py  cli.py  dedupe.py  export.py  identity.py  mappings.py  models.py  normalize.py  reconcile.py  source_dates.py  source_registry.py
finance_pipeline/loaders/: __init__.py  amazon_order_history_exporter.py  amazon_order_history_reporter.py  costco_receipt_downloader.py  generic.py  google_sheets_shortcut.py  orderpro.py  retail_common.py  simplifi.py  store_receipt_extract.py  target_manual.py
finance_pipeline/storage/: __init__.py  base.py  bigquery_store.py  firestore_store.py  memory_store.py
tests/: test_amazon_order_history_exporter.py  test_amazon_order_history_reporter.py  test_categorize.py  test_cli.py  test_costco_receipt_downloader.py  test_dedupe.py  test_export.py  test_google_sheets_shortcut.py  test_identity_and_state.py  test_orderpro.py  test_reconcile.py  test_simplifi.py  test_store_receipt_extract.py
tests/fixtures/: amazon_exporter.json  amazon_ohr.csv  costco.json  malformed.csv  orderpro_amazon_items.csv  orderpro_amazon_orders.csv  orderpro_target_items.csv  orderpro_target_orders.csv  simplifi.csv
